argocd/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: argocd
  labels:
    openshift.io/cluster-monitoring: 'true'
